update: Added a Dashboard link to the title pages (start page)

--- a/start.html
+++ b/start.html
@@ -3,9 +3,9 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>SEMAINE DE LA SECURITE / Security Week 2020 ---> Challenge Game v.1.0 </title>
+    <title>SEMAINE DE LA SECURITE / Security Week 2022 ---> Quiz and Maze Challenge Game v.2.0 </title>
     <link rel="stylesheet" href="./css/style.css">
-<!--    // by Alexey Zapromyotov (c) 2019-->
+<!--    // by Alexey Zapromyotov (c) 2019/2022-->
 </head>
 <body style="background-color: #f8f6f0;">
 <form action="./index.php" method="POST" >
@@ -15,8 +15,8 @@
         <div id="quiz">
           <div class="introTopDiv">
             <div class="introDivUp">
-              <h3>Security Week 2020 ---> Challenge Game v.1.0 </h3>
-              <h3>INTRODUCTION TO THE GAME /STORY</h3>
+              <h3>Quiz and Maze Challenge Game v.2.0</h3>
+              <h3>INTRODUCTION TO THE GAME /STORY (needs update for ver 2022)</h3>
 
               <p> Célébrer la Semaine de la sécurité de l’information, c’est souligner la manière dont nous travaillons ensemble pour plus de sécurité.
                   Venez mettre au défi vos connaissances sur les différents principes de la sécurité de l’information par l’un des chemins disponibles dans le labyrinthe!
@@ -28,15 +28,16 @@
           </div>
           <hr/>
           <div class="introMidDiv">
-            <div class="introDivImg">
-              <!-- <iframe src="./video/securityWeekAnimation/IntroductionVer1_640.html" class="iframeIntro"></iframe> -->
-            </div>
+            <!-- <div class="introDivImg">
+               <iframe src="./video/securityWeekAnimation/IntroductionVer1_640.html" class="iframeIntro"></iframe> 
+            </div> -->
             <div class="introDivDown">
               <h3> How To PLAY </h3>
-               To unlock the doors, a key will be given if the Quizz is answered properly.<br>
+                  To achieve the final goal you will need to collect several pieces of the genom... 
+                  which could be obtained by unswering several questions correctly.<br>
                   And the WINNER IS  the player that reached the patient and saved his life in the least possible time!!
                   Use keyboard cursor key /mouse click to move around.
-                  <br>Questions will be multiple choice with one correct answer, your results will be shown at the end.
+                  <br />Questions will be multiple choice with one correct answer, your results will be shown at the end. <br />
             </div>
           </div>
           <hr/>
@@ -56,7 +57,9 @@
     <!-- <button id="previous">Previous Question</button>
     <button id="next">Next Question</button> -->
     <div id="results">
-        <p>Debug: <br/>
+      <hr />
+        <p>Debug: <br />
+          <a href="./lib/landingQTable.php" id="link" >View Dashboard: Questions Data Table</a> <br /><br />
             <a href="./rest/showDBcont.php" id="link" >View Data Tables</a>&nbsp; &nbsp;
         </p>
     </div>
