update: Updating user details/dashboard for admin pages

--- a/start.html
+++ b/start.html
@@ -59,8 +59,9 @@
     <div id="results">
       <hr />
         <p>Debug: <br />
-          <a href="./lib/landingQTable.php" id="link" >View Dashboard: Questions Data Table</a> <br /><br />
-            <a href="./rest/showDBcont.php" id="link" >View Data Tables</a>&nbsp; &nbsp;
+          <a href="./lib/landingQTable.php" id="link" >View QuestionsDashboard: Questions Table</a> <br /><br />
+          <a href="./lib/landingUsrTable.php" id="link" >View Users Dashboard: Users Table</a> <br /><br />
+          <a href="./rest/showDBcont.php" id="link" >View Data Tables</a>&nbsp; &nbsp;
         </p>
     </div>
     <!-- partial -->
