upd: admin page with login.session id, getMap.php updated with topicslist read array finction

--- a/start.html
+++ b/start.html
@@ -70,15 +70,15 @@
 
 </form>
 </body>
-<!-- <script>
+<script>
   function openWin() {
     var userIUN = document.getElementById("userId").value;
     myWindow = window.open("./showJS.php?userIUN=" + userIUN , "" , "width=800, height=600");   // Opens a new window
   }
-</script> -->
-<!-- <script language="php">
+</script>
+<script language="php">
  $username = $_POST['username'];
  echo ($username);
-</script>
--->
+</script> 
+
 </html>
