added more png and fixed text when correct answer displayed

--- a/start.html
+++ b/start.html
@@ -15,7 +15,7 @@
         <div id="quiz">
           <div class="introTopDiv">
             <div class="introDivUp">
-              <h3>Quiz and Maze Challenge Game v.2.0</h3>
+              <h3>Genomics Research Quiz Game</h3>
               <h3>INTRODUCTION TO THE GAME /STORY (needs update for ver 2022)</h3>
 
               <p> Célébrer la Semaine de la sécurité de l’information, c’est souligner la manière dont nous travaillons ensemble pour plus de sécurité.
