update: start.html updated, game updated

--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
 <body style="background-color: #f8f6f0;">
 <form action="./index.php" method="POST" >
     <!-- partial:index.partial.html -->
-    <h1>SEMAINE DE LA SECURITE / Security Week Challenge Game</h1>
+    <h1>SEMAINE DE LA SECURITE / Security Week Challenge Game 2022</h1>
     <div>
         <div id="quiz">
           <div class="introTopDiv">
