--- a/start.html
+++ b/start.html
@@ -16,7 +16,7 @@
           <div class="introTopDiv">
             <div class="introDivUp">
               <h3>Genomics Research Quiz Game</h3>
-              <h3>INTRODUCTION TO THE GAME /STORY (needs update for ver 2022)</h3>
+              <h3>INTRODUCTION TO THE GAME (2022)</h3>
 
               <p> Célébrer la Semaine de la sécurité de l’information, c’est souligner la manière dont nous travaillons ensemble pour plus de sécurité.
                   Venez mettre au défi vos connaissances sur les différents principes de la sécurité de l’information par l’un des chemins disponibles dans le labyrinthe!
@@ -27,17 +27,35 @@
             </div>
           </div>
           <hr/>
+          <h3> Comment jouer / How To PLAY </h3>
           <div class="introMidDiv">
+            <div class="introDivImg" style="vertical-align:middle;">
+              <img src="./png/GameScreen.PNG" alt="GameScreen" style="width:500px;">              
+            </div>
+
             <!-- <div class="introDivImg">
                <iframe src="./video/securityWeekAnimation/IntroductionVer1_640.html" class="iframeIntro"></iframe> 
             </div> -->
-            <div class="introDivDown">
-              <h3> How To PLAY </h3>
-                  To achieve the final goal you will need to collect several pieces of the genom... 
-                  which could be obtained by unswering several questions correctly.<br>
-                  And the WINNER IS  the player that reached the patient and saved his life in the least possible time!!
-                  Use keyboard cursor key /mouse click to move around.
-                  <br />Questions will be multiple choice with one correct answer, your results will be shown at the end. <br />
+            <div class="introDivDown">              
+              Le joueur peut choisir n'importe quelle station du laboratoire, mais il ne peut donner la bonne réponse qu'une seule fois.
+                 Si la réponse correcte est acceptée, la question est considérée comme résolue et devient inactive pour cet emplacement.
+                 Si la réponse est incorrecte, le joueur a donné une autre chance (cette question est toujours active).
+                 Pour passer de l'un à l'autre, il utilisera les flèches/touches de navigation (également : touches WASD).
+                 Le joueur aura la possibilité d'aller à gauche ou à droite (ou de haut en bas) après chaque poste de travail jusqu'à ce qu'il atteigne une destination finale.
+                 Il faut répondre correctement à la question pour obtenir le prochain code du génome.
+                 Si le chercheur répond correctement, il recevra un composant du génome.
+                 <br> Le joueur doit en obtenir 8 pour terminer l'édition du génome et créer avec succès le traitement
+                 <hr />
+                The player,in the role of Researcher, will walk to different sections of a Lab (total sections: 8).
+                Each of 8 workstations will present the chance to answer a Quiz.<br>
+                The player can choose any station at the Lab, but he can give the correct answer only once. 
+                If correct answer accepted the question considered as resolved and became inactive for that location.
+                If the answer is incorrect, the player has given another chance (taht question is still active).
+                To move from one to the other he will use arrows/navigation keys (also: WASD-keys). 
+                Player will be given the option to go left or right (or up and down) after each workstation until he reaches a final destination.
+                The Question must be answered correctly to get the next genome code.
+                If Researcher answers correctly, he will be given component of genome.               
+                  <br />Player must obtain 8 of these to complete the editing of the genome and successfully create the treatment.                
             </div>
           </div>
           <hr/>
@@ -57,12 +75,7 @@
     <!-- <button id="previous">Previous Question</button>
     <button id="next">Next Question</button> -->
     <div id="results">
-      <hr />
-        <p>Debug: <br />
-          <a href="./lib/landingQTable.php" id="link" >View QuestionsDashboard: Questions Table</a> <br /><br />
-          <a href="./lib/landingUsrTable.php" id="link" >View Users Dashboard: Users Table</a> <br /><br />
-          <a href="./rest/showDBcont.php" id="link" >View Data Tables</a>&nbsp; &nbsp;
-        </p>
+      
     </div>
     <!-- partial -->
     <!-- <script  src="./script.js"></script> -->
